--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/leaflet": "^1.5.19",
+    "leaflet": "^1.7.1",
     "vue": "^3.0.0"
   },
   "devDependencies": {
