--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,16 +24,17 @@
     "@typescript-eslint"
   ],
   "rules": {
-      "semi": "error",
-      "no-unused-vars": "warn",
-      "vue/no-unused-components": "warn",
-      "vue/multiline-html-element-content-newline":  0,
-      "comma-dangle": ["error", {
-        "arrays": "never",
-        "objects": "never",
-        "imports": "never",
-        "exports": "never",
-        "functions": "never"
-    }]
+    "semi": "error",
+    "no-unused-vars": "warn",
+    "vue/no-unused-components": "warn",
+    "vue/multiline-html-element-content-newline":  0,
+    "comma-dangle": ["error", {
+      "arrays": "never",
+      "objects": "never",
+      "imports": "never",
+      "exports": "never",
+      "functions": "never"
+    }],
+    "no-useless-constructor": 0
   }
 }
